javafmt requires --add-exports now